--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </div>
               </div>
               <div class="tip-section">
-                <label for="tip-input" class="section-title">Select Tip %</label>
+                <span for="tip-input" class="section-title">Select Tip %</span>
                 <div class="tip-items-container">
                   <label class="tip-item" for="tip-five">
                     <span>5%</span>
@@ -62,7 +62,7 @@
               <div class="n-people-section">
                 <div class="n-people-label-container">
                   <label for="n-people-input" class="section-title">Number of People</label>
-                  <label class="label-invalid">Can't be zero</label>  
+                  <label for="n-people-input" class="label-invalid">Can't be zero</label>  
                 </div>
                 <div id="text-input-id" class="text-input-container">
                   <span class="person-icon"><img src="images/icon-person.svg" alt=""></span>
