--- a/index.html
+++ b/index.html
@@ -32,31 +32,45 @@
               <div class="tip-section">
                 <span for="tip-input" class="section-title">Select Tip %</span>
                 <div class="tip-items-container">
-                  <label class="tip-item" for="tip-five">
-                    <span>5%</span>
+                  <div class="tip-item">
+                    <label for="tip-five">
+                      <span>5%</span>
+                    </label>
                     <input type="radio" class="tip-radio-input" id="tip-five" name="tipInput" value="5">
-                  </label>
-                  <label class="tip-item" for="tip-ten">
-                    <span>10%</span>
+                  </div>
+                  <div class="tip-item">
+                    <label for="tip-ten">
+                      <span>10%</span>
+                    </label>
                     <input type="radio" class="tip-radio-input" id="tip-ten" name="tipInput" value="10">
-                  </label>
-                  <label class="tip-item" for="tip-fifteen">
-                    <span>15%</span>
+                  </div>
+                  <div class="tip-item">
+                    <label for="tip-fifteen">
+                      <span>15%</span>
+                    </label>
                     <input type="radio" class="tip-radio-input" id="tip-fifteen" name="tipInput" value="15">
-                  </label>
-                  <label class="tip-item" for="tip-twenty-five"> 
-                    <span>25%</span>
+                  </div>
+                  <div class="tip-item">
+                    <label for="tip-twenty-five"> 
+                      <span>25%</span>
+                    </label>
                     <input type="radio" class="tip-radio-input" id="tip-twenty-five" name="tipInput" value="25">
-                  </label>
-                  <label class="tip-item" for="tip-fifty">
-                    <span>50%</span>
+                  </div>
+                  <div class="tip-item">
+                    <label for="tip-fifty">
+                      <span>50%</span>
+                    </label>
                     <input type="radio" class="tip-radio-input" id="tip-fifty" name="tipInput" value="50">
-                  </label>
-                  <label class="tip-item" for="tip-custom">
-                    <span class="tip-custom-label">Custom</span>
+                  </div>
+
+                  <div class="tip-item">
+                    <label for="tip-custom">
+                      <span class="tip-custom-label">Custom</span>
+                    </label>
                     <input type="radio" class="tip-radio-input" id="tip-custom" name="tipInput" value="custom">
                     <input type="text" class="text-input tip-text-input" name="tipCustomValue" onkeyup="checkCustom(this.value)" onfocusout="calcTip()">
-                  </label>
+                  </div>
+
                 </div>
               </div>
               <div class="n-people-section">
@@ -96,7 +110,7 @@
       </div>
     </div>
   </main>
-  
+
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
