--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <main>
     <div class="wrapper">
       <div class="title">
+        <h1 class="h1-title">Tip Calculator</h1>
         <img src="images/logo.svg" alt="">
       </div>
       <div>
@@ -30,7 +31,7 @@
                 </div>
               </div>
               <div class="tip-section">
-                <span for="tip-input" class="section-title">Select Tip %</span>
+                <span class="section-title">Select Tip %</span>
                 <div class="tip-items-container">
                   <div class="tip-item">
                     <label for="tip-five">
